hphp/test/slow/reified_generics/reified-param-primitive-2a.php.expectf

Warning: Argument 1 passed to f() must be an instance of shape('a' => C<int>, 'b' => string), array given in %s on line 5

Catchable fatal error: Argument 1 passed to f() must be an instance of shape('a' => C<int>, 'b' => int), array given in %s on line 10
